@@ -257,8 +257,12 @@
 2. 灰色 → 白色 引用消失时，如果没有黑色指向白色引用会被push到堆栈,下次扫描时拿到这个引用，由于有RSet的存在，不需要扫描整个堆去查找指向白色的引用，效率比较高
 
 ![](../youdaonote-images/Pasted%20image%2020230816214155.png)
+
+> 由于RSet 的存在，那么每次给对象赋引用的时候，就得做一些额外的操作，在GC中被称为写屏障,这个写屏障不等于内存屏障
+
+> java 10以前是串行FullGC，之后是并行FullGC
 ### 1.7.8 ZGC (1ms) 
-- PK C++ 算法：ColoredPointers + LoadBarrier
+- 算法：ColoredPointers + LoadBarrier
 **ColoredPointers**: 
 ### 1.7.9 Shenandoah 
 - 算法：ColoredPointers + WriteBarrier
@@ -302,52 +306,3 @@
     - 1.8.0_181 默认（看不出来）Copy MarkCompact
         
     - 1.8.0_222 默认 PS + PO
-
-## 2.1 JVM调优第一步，了解JVM常用命令行参数
-
-- JVM的命令行参数参考：[https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html](https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html)
-    
-- HotSpot参数分类
-    
-    > 标准： - 开头，所有的HotSpot都支持
-    > 
-    > 非标准：-X 开头，特定版本HotSpot支持特定命令
-    > 
-    > 不稳定：-XX 开头，下个版本可能取消
-    
-    java -version
-    
-    java -X
-
-```java
-// 内存溢出的程序
-import java.util.List;
-import java.util.LinkedList;
-
-public class HelloGC {
-  public static void main(String[] args) {
-    System.out.println("HelloGC!");
-    List list = new LinkedList();
-    for(;;) {
-      byte[] b = new byte[1024*1024];
-      list.add(b);
-    }
-  }
-}
-```
-
-1. 区分概念：内存泄漏memory leak，内存溢出out of memory
-	1. 内存泄漏：有一块无人占用的内存
-	2. 内存溢出：不断产生对象
-2. java -XX:+PrintCommandLineFlags HelloGC(主要用于获取和打印当前正在运行的 Java 程序的命令行参数和标志。)
-3. java -Xmn10M(新生代大小) -Xms40M(最小堆大小) -Xmx60M（最大堆大小，一般设为和最小一样，防止弹性浪费系统资源） -XX:+PrintCommandLineFlags -XX:+PrintGC HelloGC 
-	PrintGCDetails PrintGCTimeStamps PrintGCCauses (打印GC详细，打印GC原因)
-4. java -XX:+UseConcMarkSweepGC -XX:+PrintCommandLineFlags HelloGC
-    cms垃圾回收器，命令会比较频繁
-5. java -XX:+PrintFlagsInitial 默认参数值
-    
-6. java -XX:+PrintFlagsFinal 最终参数值
-    
-7. java -XX:+PrintFlagsFinal | grep xxx 找到对应的参数
-    
-8. java -XX:+PrintFlagsFinal -version |grep GC
